fixed weird menu bug that was preventing menu from displaying on desktop after opening and closing on mobile

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -5,6 +5,12 @@
     height: calc(100% - 48px);
 }
 
+@media only screen and (min-width: 768px) {
+    nav {
+        display: flex !important;
+    }
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
